--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -19,28 +19,26 @@ body {
   }
 }
 .matrix {
-  object-fit: scale-down;
-  background-color: black;
   margin: auto;
   height: auto;
   width: auto;
 }
 .inmatrixComponent {
+  object-fit: scale-down;
   padding: 0;
   margin: 0;
-  font-size: 50px;
+  font-size: 80px;
   font-family: "Source Code Pro", monospace;
-  //color: rgb(40, 40, 40);
 }
 .block {
+  object-fit: scale-down;
   padding: 0;
   border-width: 0;
-  border-color: yellow;
   display: inline-block;
   line-height: 40px;
   word-spacing: 0;
-  height: 50;
-  width: 50;
+  height: 80;
+  width: 80;
   color: rgb(40, 40, 40);
 }
 .r0c0 {
@@ -50,7 +48,8 @@ body {
   border-style: solid;
   border-color: rgb(80, 80, 255);
   border-width: 1;
-  width: 800;
+  width: max-content;
+  //width: 800;
   margin: auto;
   padding: 20px;
 }
