--- a/styles/styles.css
+++ b/styles/styles.css
@@ -6,13 +6,10 @@ body {
   color: white;
 }
 
-.navbar {
-  padding: 1;
-  margin: auto;
-}
-
 .navbar h1 {
-  font-size: 10rem;
+  margin-left: 20px;
+  margin-bottom: 0em;
+  font-size: 10em;
   font-family: "Source Code Pro", monospace;
   color: #5e5e5e;
 }
@@ -27,36 +24,40 @@ body {
   width: auto;
 }
 
-.inmatrixComponent {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
-  padding: 0;
-  margin: 0;
-  font-size: 80px;
-  font-family: "Source Code Pro", monospace;
-}
-
 .block {
-  -o-object-fit: scale-down;
-     object-fit: scale-down;
+  font-family: "Source Code Pro", monospace;
+  font-size: 60px;
+  -o-object-fit: inherit;
+     object-fit: inherit;
   padding: 0;
   border-width: 0;
   display: inline-block;
-  line-height: 40px;
+  line-height: 45px;
   word-spacing: 0;
-  height: 80;
-  width: 80;
+  height: 50;
+  width: 50;
   color: #282828;
+  -webkit-transition: color 0.1s;
+  transition: color 0.1s;
+}
+
+.block:hover {
+  color: #5050ff;
 }
 
 .frame {
+  margin-right: 2em;
+  margin-left: 2em;
   border-style: solid;
   border-color: #5050ff;
-  border-width: 1;
+  border-width: 3;
   width: -webkit-max-content;
   width: -moz-max-content;
   width: max-content;
   margin: auto;
-  padding: 20px;
+}
+
+.center {
+  margin: auto;
 }
 /*# sourceMappingURL=styles.css.map */
