--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,16 +1,15 @@
 body {
   padding: 0;
-
   margin: 0;
   background: black;
   text-align: center;
   color: white;
 }
 .navbar {
-  padding: 1;
-  margin: auto;
   h1 {
-    font-size: 10rem;
+    margin-left: 20px;
+    margin-bottom: 0em;
+    font-size: 10em;
     font-family: "Source Code Pro", monospace;
     color: rgb(94, 94, 94);
     .spanC {
@@ -23,30 +22,33 @@ body {
   height: auto;
   width: auto;
 }
-.inmatrixComponent {
-  object-fit: scale-down;
-  padding: 0;
-  margin: 0;
-  font-size: 80px;
-  font-family: "Source Code Pro", monospace;
-}
 .block {
-  object-fit: scale-down;
+  font-family: "Source Code Pro", monospace;
+  font-size: 60px;
+  object-fit: inherit;
   padding: 0;
   border-width: 0;
   display: inline-block;
-  line-height: 40px;
+  line-height: 45px;
   word-spacing: 0;
-  height: 80;
-  width: 80;
+  height: 50;
+  width: 50;
   color: rgb(40, 40, 40);
+  transition: color 0.1s;
+}
+.block:hover {
+  color: rgb(80, 80, 255);
 }
 .frame {
+  margin-right: 2em;
+  margin-left: 2em;
   border-style: solid;
   border-color: rgb(80, 80, 255);
-  border-width: 1;
+  border-width: 3;
   width: max-content;
-  //width: 800;
+
   margin: auto;
-  padding: 20px;
+}
+.center {
+  margin: auto;
 }
