--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -9,7 +9,7 @@ body {
   width: fit-content;
   margin: auto;
   padding: 1em;
-  height: 1500px;
+  height: fit-content;
 }
 .navbar {
   align-items: flex-start;
