--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,6 +7,9 @@ body {
 }
 
 .content {
+  border-color: white;
+  border-width: 3;
+  border-style: solid;
   width: -webkit-fit-content;
   width: -moz-fit-content;
   width: fit-content;
