--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,6 +6,9 @@ body {
   color: white;
 }
 .content {
+  border-color: white;
+  border-width: 3;
+  border-style: solid;
   width: fit-content;
   margin: auto;
   padding: 1em;
