--- a/styles/styles.css
+++ b/styles/styles.css
@@ -7,7 +7,7 @@ body {
 }
 
 .content {
-  border-color: white;
+  border-color: blue;
   border-width: 3;
   border-style: solid;
   width: -webkit-fit-content;
