--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,7 +6,7 @@ body {
   color: white;
 }
 .content {
-  border-color: white;
+  border-color: blue;
   border-width: 3;
   border-style: solid;
   width: fit-content;
