--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -21,6 +21,7 @@ body {
     width: fit-content;
     margin-left: 20px;
     margin-bottom: 0em;
+    margin-top: 0em;
     font-size: 10em;
     font-family: "Source Code Pro", monospace;
     color: rgb(100, 100, 100);
