--- a/styles/styles.css
+++ b/styles/styles.css
@@ -44,7 +44,7 @@
 
 #navbar__logo {
   background-size: 100%;
-  color: #808080;
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -75,7 +75,7 @@
 }
 
 .navbar__links {
-  color: #808080;
+  color: white;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -93,114 +93,72 @@
 }
 
 .navbar__links:hover {
-  color: white;
+  color: blue;
 }
 
-@media screen and (max-width: 960px) {
-  .navbar__container {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: justify;
-        -ms-flex-pack: justify;
-            justify-content: space-between;
-    height: 80px;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0;
-  }
-  .navbar__menu {
-    display: -ms-grid;
-    display: grid;
-    -ms-grid-columns: auto;
-        grid-template-columns: auto;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    top: -1000px;
-    opacity: 1;
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    z-index: -1;
-  }
-  .navbar__menu.active {
-    background: #131313;
-    top: 100%;
-    opacity: 1;
-    -webkit-transition: all 0.5s ease;
-    transition: all 0.5s ease;
-    z-index: 99;
-    height: 60vh;
-    font-size: 1.6rem;
-  }
-  #navbar__logo {
-    padding-left: 25px;
-  }
-  .navbar__toggle .bar {
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    -webkit-transition: all 0.3s ease-in-out;
-    transition: all 0.3s ease-in-out;
-    background: #fff;
-  }
-  .navbar__item {
-    width: 100%;
-  }
-  .navbar__links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-  .navbar__btn {
-    padding-bottom: 2rem;
-  }
-  .button {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    width: 80%;
-    height: 80px;
-    margin: 0;
-  }
-  #mobile-menu {
-    position: absolute;
-    top: 20%;
-    right: 5%;
-    -webkit-transform: translate(5%, 20%);
-            transform: translate(5%, 20%);
-  }
-  .navbar__toggle .bar {
-    display: block;
-    cursor: pointer;
-  }
-  #mobile-menu.is-active .bar:nth-child(2) {
-    opacity: 0;
-  }
-  #mobile-menu.is-active .bar:nth-child(1) {
-    -webkit-transform: translateY(8px) rotate(45deg);
-            transform: translateY(8px) rotate(45deg);
-  }
-  #mobile-menu.is-active .bar:nth-child(3) {
-    -webkit-transform: translateY(-8px) rotate(-45deg);
-            transform: translateY(-8px) rotate(-45deg);
-  }
+.button {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  background: #833ab4;
+  background: -webkit-gradient(linear, left top, right top, from(#0000ff), to(#6666ff));
+  background: linear-gradient(to right, #0000ff, #6666ff);
+  color: #fff;
+  -webkit-transition: all 0.1s ease;
+  transition: all 0.1s ease;
+}
+
+.button:hover {
+  border: white;
+  border-style: solid;
+  border-width: 4px;
+}
+
+.navbar__btn {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  padding: 0 1rem;
+  width: 100%;
 }
 
 /* Hero Section */
 .hero {
-  background: #000000;
-  background: -webkit-gradient(linear, left top, right top, from(#161616), to(#000000));
-  background: linear-gradient(to right, #161616, #000000);
-  padding: 200px 0;
+  border: solid;
+  border-color: white;
+  border-width: thick;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin: auto;
+  max-width: 1200px;
+}
+
+.hero h1 {
+  font-size: 10rem;
+  color: white;
 }
 
 .hero__container {
@@ -224,53 +182,20 @@
   padding: 30px;
 }
 
-.hero__heading {
-  font-size: 100px;
-  margin-bottom: 24px;
-  color: #fff;
+.image__container {
+  z-index: 999;
+  color: #0000ff;
+  width: 300px;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
 }
 
-.hero__heading span {
-  background: #ee0979;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, left top, right top, from(#ff6a00), to(#ee0979));
-  background: linear-gradient(to right, #ff6a00, #ee0979);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: 100%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -mo-text-fill-color: transparent;
-}
-
-.hero__description {
-  font-size: 60px;
-  background: #da22ff;
-  /* fallback for old browsers */
-  /* Chrome 10-25, Safari 5.1-6 */
-  background: -webkit-gradient(linear, left top, right top, from(#8f0eff), to(#da22ff));
-  background: linear-gradient(to right, #8f0eff, #da22ff);
-  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: 100%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-}
-
-.highlight {
-  border-bottom: 4px solid #8400ff;
-}
-
-@media screen and (max-width: 768px) {
-  .hero__heading {
-    font-size: 60px;
-  }
-  .hero__description {
-    font-size: 40px;
-  }
+.image__container .image {
+  background-color: transparent;
+  width: 300px;
+  position: absolute;
+  top: -150px;
+  right: 0;
 }
 /*# sourceMappingURL=styles.css.map */
