--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -31,7 +31,7 @@
 }
 #navbar__logo {
   background-size: 100%;
-  color: #808080;
+  color: white;
   display: flex;
   align-items: center;
   cursor: pointer;
@@ -51,7 +51,7 @@
   height: 80px;
 }
 .navbar__links {
-  color: #808080;
+  color: white;
   display: flex;
   align-items: center;
   justify-content: center;
@@ -61,111 +61,55 @@
   transition: all 0.3s ease;
 }
 .navbar__links:hover {
-  color: white;
-  //color: blue;
+  color: blue;
+}
+.button {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  text-decoration: none;
+  padding: 10px 20px;
+  height: 100%;
+  width: 100%;
+  border: none;
+  outline: none;
+  border-radius: 8px;
+  background: #833ab4;
+  background: -webkit-linear-gradient(to right, #0000ff, #6666ff);
+  background: linear-gradient(to right, #0000ff, #6666ff);
+  color: #fff;
+  transition: all 0.1s ease;
+}
+.button:hover {
+  border: white;
+  border-style: solid;
+  border-width: 4px;
 }
 
-@media screen and (max-width: 960px) {
-  .navbar__container {
-    display: flex;
-    justify-content: space-between;
-    height: 80px;
-    z-index: 1;
-    width: 100%;
-    max-width: 1300px;
-    padding: 0;
-  }
-
-  .navbar__menu {
-    display: grid;
-    grid-template-columns: auto;
-    margin: 0;
-    width: 100%;
-    position: absolute;
-    top: -1000px;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: -1;
-  }
-
-  .navbar__menu.active {
-    background: #131313;
-    top: 100%;
-    opacity: 1;
-    transition: all 0.5s ease;
-    z-index: 99;
-    height: 60vh;
-    font-size: 1.6rem;
-  }
-
-  #navbar__logo {
-    padding-left: 25px;
-  }
-
-  .navbar__toggle .bar {
-    width: 25px;
-    height: 3px;
-    margin: 5px auto;
-    transition: all 0.3s ease-in-out;
-    background: #fff;
-  }
-
-  .navbar__item {
-    width: 100%;
-  }
-
-  .navbar__links {
-    text-align: center;
-    padding: 2rem;
-    width: 100%;
-    display: table;
-  }
-
-  .navbar__btn {
-    padding-bottom: 2rem;
-  }
-
-  .button {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80%;
-    height: 80px;
-    margin: 0;
-  }
-
-  #mobile-menu {
-    position: absolute;
-    top: 20%;
-    right: 5%;
-    transform: translate(5%, 20%);
-  }
-
-  .navbar__toggle .bar {
-    display: block;
-    cursor: pointer;
-  }
-
-  #mobile-menu.is-active .bar:nth-child(2) {
-    opacity: 0;
-  }
-
-  #mobile-menu.is-active .bar:nth-child(1) {
-    transform: translateY(8px) rotate(45deg);
-  }
-
-  #mobile-menu.is-active .bar:nth-child(3) {
-    transform: translateY(-8px) rotate(-45deg);
-  }
+.navbar__btn {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  padding: 0 1rem;
+  width: 100%;
 }
 
 // HERO
-
 /* Hero Section */
 .hero {
-  background: #000000;
-  background: linear-gradient(to right, #161616, #000000);
-  padding: 200px 0;
+  //background: #0084ff;
+  border: solid;
+  border-color: white;
+  border-width: thick;
+  justify-content: center;
+  align-items: center;
+  margin: auto;
+  max-width: 1200px;
+  //padding: 200px 0;
+  h1 {
+    font-size: 10rem;
+    color: white;
+  }
 }
 
 .hero__container {
@@ -180,63 +124,19 @@
   padding: 30px;
 }
 
-.hero__heading {
-  font-size: 100px;
-  margin-bottom: 24px;
-  color: #fff;
+.image__container {
+  z-index: 999;
+  color: #0000ff;
+  //background-color: blue;
+  width: 300px;
+  height: 500px;
+  overflow: hidden;
+  position: relative;
 }
-
-.hero__heading span {
-  background: #ee0979; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #ff6a00,
-    #ee0979
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #ff6a00,
-    #ee0979
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: 100%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -mo-text-fill-color: transparent;
-}
-
-.hero__description {
-  font-size: 60px;
-  background: #da22ff; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #9114ff,
-    #da22ff
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #8f0eff,
-    #da22ff
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-  background-size: 100%;
-  background-clip: text;
-  -webkit-background-clip: text;
-  -moz-background-clip: text;
-  -webkit-text-fill-color: transparent;
-  -moz-text-fill-color: transparent;
-}
-
-.highlight {
-  border-bottom: 4px solid rgb(132, 0, 255);
-}
-
-@media screen and (max-width: 768px) {
-  .hero__heading {
-    font-size: 60px;
-  }
-
-  .hero__description {
-    font-size: 40px;
-  }
+.image__container .image {
+  background-color: transparent;
+  width: 300px;
+  position: absolute;
+  top: -150px;
+  right: 0;
 }
