--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,142 +1,89 @@
-* {
-  background-color: black;
+:root {
+  --primary-color: #007af3;
+}
+
+body {
+  background: #000;
   margin: 0;
-  padding: 0;
   scroll-behavior: smooth;
   font-family: sans-serif;
-  box-sizing: border-box;
+  color: white;
 }
 
-// NAVBAR
+//navbar
 .navbar {
-  background: #131313;
-  height: 80px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.2rem;
-  position: sticky;
-  top: 0;
-  z-index: 999;
-}
-.navbar__container {
-  display: flex;
-  justify-content: space-between;
-  height: 80px;
-  z-index: 1;
-  width: 100%;
-  max-width: 1300px;
-  margin: 0 auto;
-  padding: 0 50px;
-}
-#navbar__logo {
-  background-size: 100%;
-  color: white;
-  display: flex;
-  align-items: center;
-  cursor: pointer;
-  text-decoration: none;
-  font-size: 2rem;
-  span {
-    color: rgb(50, 50, 255);
-  }
-}
-.navbar__menu {
-  display: flex;
-  align-items: center;
-  list-style: none;
-}
+  background: #101010;
+  padding: 1em;
 
-.navbar__item {
-  height: 80px;
-}
-.navbar__links {
-  color: white;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  width: 125px;
-  text-decoration: none;
-  height: 100%;
-  transition: all 0.3s ease;
-}
-.navbar__links:hover {
-  color: blue;
-}
-.button {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  text-decoration: none;
-  padding: 10px 20px;
-  height: 100%;
-  width: 100%;
-  border: none;
-  outline: none;
-  border-radius: 8px;
-  background: #833ab4;
-  background: -webkit-linear-gradient(to right, #0000ff, #6666ff);
-  background: linear-gradient(to right, #0000ff, #6666ff);
-  color: #fff;
-  transition: all 0.1s ease;
-}
-.button:hover {
-  border: white;
-  border-style: solid;
-  border-width: 4px;
-}
-
-.navbar__btn {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  padding: 0 1rem;
-  width: 100%;
-}
-
-// HERO
-/* Hero Section */
-.hero {
-  //background: #0084ff;
-  border: solid;
-  border-color: white;
-  border-width: thick;
-  justify-content: center;
-  align-items: center;
-  margin: auto;
-  max-width: 1200px;
-  //padding: 200px 0;
-  h1 {
-    font-size: 10rem;
+  .logo {
+    text-decoration: none;
+    font-weight: bold;
     color: white;
+    font-size: 1.2em;
+    span {
+      color: var(--primary-color);
+    }
+  }
+  nav {
+    display: none;
+  }
+
+  .container {
+    display: flex;
+    place-content: space-between;
+    img {
+      height: 1.2em;
+      width: 1.2em;
+    }
+  }
+  .mobile-menu {
+    cursor: pointer;
   }
 }
 
-.hero__container {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  max-width: 1200px;
-  margin: 0 auto;
-  height: 90%;
-  text-align: center;
-  padding: 30px;
+a {
+  color: #f0f0f0;
+}
+ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
 }
 
-.image__container {
-  z-index: 999;
-  color: #0000ff;
-  //background-color: blue;
-  width: 300px;
-  height: 500px;
-  overflow: hidden;
-  position: relative;
+.hero {
+  text-align: center;
 }
-.image__container .image {
-  background-color: transparent;
-  width: 300px;
-  position: absolute;
-  top: -150px;
-  right: 0;
+.left-col {
+  .subhead {
+    text-transform: uppercase;
+    font-weight: bold;
+    color: grey;
+    letter-spacing: 0.3em;
+  }
+  h1 {
+    font-size: 2.5em;
+    line-height: 1.3em;
+    margin-top: 0.2em;
+  }
+}
+
+.right-col {
+  background: #202020;
+  padding: 3em 0 2em 0;
+  .images-container {
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+  }
+  .card {
+    width: 20em;
+    height: 27.5em;
+    background: blue;
+  }
+  .cropped2 {
+    width: 16.5em;
+    height: 27.5em;
+    object-fit: cover;
+    object-position: 20% 50%;
+  }
 }
