--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -1,89 +1,117 @@
 :root {
-  --primary-color: #007af3;
+    --primary-color: #007af3;
 }
 
 body {
-  background: #000;
-  margin: 0;
-  scroll-behavior: smooth;
-  font-family: sans-serif;
-  color: white;
+    background: #000;
+    margin: 0;
+    scroll-behavior: smooth;
+    font-family: sans-serif;
+    color: white;
 }
 
 //navbar
 .navbar {
-  background: #101010;
-  padding: 1em;
-
-  .logo {
-    text-decoration: none;
-    font-weight: bold;
-    color: white;
-    font-size: 1.2em;
-    span {
-      color: var(--primary-color);
+    background: #101010;
+    padding: 1em;
+    .logo {
+        text-decoration: none;
+        font-weight: bold;
+        color: white;
+        font-size: 1.2em;
+        span {
+            color: var(--primary-color);
+        }
     }
-  }
-  nav {
-    display: none;
-  }
-
-  .container {
-    display: flex;
-    place-content: space-between;
-    img {
-      height: 1.2em;
-      width: 1.2em;
+    nav {
+        display: none;
     }
-  }
-  .mobile-menu {
-    cursor: pointer;
-  }
+    .container {
+        display: flex;
+        place-content: space-between;
+        img {
+            height: 1.2em;
+            width: 1.2em;
+        }
+    }
+    .mobile-menu {
+        cursor: pointer;
+    }
 }
 
 a {
-  color: #f0f0f0;
+    color: #f0f0f0;
 }
+
 ul {
-  list-style-type: none;
-  padding: 0;
-  margin: 0;
+    list-style-type: none;
+    padding: 0;
+    margin: 0;
 }
 
 .hero {
-  text-align: center;
+    text-align: center;
 }
+
 .left-col {
-  .subhead {
-    text-transform: uppercase;
-    font-weight: bold;
-    color: grey;
-    letter-spacing: 0.3em;
-  }
-  h1 {
-    font-size: 2.5em;
-    line-height: 1.3em;
-    margin-top: 0.2em;
-  }
+    .subhead {
+        text-transform: uppercase;
+        font-weight: bold;
+        color: grey;
+        letter-spacing: 0.3em;
+    }
+    h1 {
+        font-size: 2.5em;
+        line-height: 1.3em;
+        margin-top: 0.2em;
+    }
 }
 
 .right-col {
-  background: #202020;
-  padding: 3em 0 2em 0;
-  .images-container {
-    display: flex;
-    flex-direction: row;
-    width: fit-content;
-  }
-  .card {
-    width: 20em;
-    height: 27.5em;
-    background: blue;
-  }
-  .cropped2 {
-    width: 16.5em;
-    height: 27.5em;
-    object-fit: cover;
-    object-position: 20% 50%;
-  }
+    background: #202020;
+    padding: 3em 0 2em 0;
+    .carousel {
+        //background-color: yellow;
+        align-items: center;
+        display: flex;
+        margin: 2rem auto;
+        overflow: hidden;
+        position: relative;
+        width: 16.5em;
+        .carousel-images {
+            display: flex;
+            transform: translateX(0);
+            transition: tranform 0.25;
+        }
+        .carousel-button {
+            background: teal;
+            border: 0;
+            border-radius: 50%;
+            color: white;
+            cursor: pointer;
+            font-size: 1.5em;
+            font-weight: bold;
+            opacity: 0.25;
+            position: absolute;
+            transition: opacity 0.25;
+            width: 1.5em;
+            height: 1.5em;
+            z-index: 1;
+        }
+        .previous {
+            left: 5px;
+        }
+        .next {
+            right: 5px;
+        }
+        .carousel-button:hover {
+            opacity: 0.5;
+        }
+    }
+    .cropped2 {
+        width: 16.5em;
+        height: 27.5em;
+        object-fit: cover;
+        object-position: 20% 50%;
+    }
 }
