--- a/styles/styles.css
+++ b/styles/styles.css
@@ -11,8 +11,10 @@ body {
 }
 
 .navbar {
+  max-width: 1500px;
   background: #101010;
   padding: 1em;
+  margin: auto;
 }
 
 .navbar .logo {
@@ -60,6 +62,11 @@ ul {
   text-align: center;
 }
 
+.left-col {
+  margin-top: auto;
+  margin-bottom: auto;
+}
+
 .left-col .subhead {
   text-transform: uppercase;
   font-weight: bold;
@@ -73,66 +80,89 @@ ul {
   margin-top: 0.2em;
 }
 
-.right-col {
-  background: #202020;
-  padding: 3em 0 2em 0;
+.left-col {
+  -ms-grid-row: 1;
+  -ms-grid-row-span: 2;
+  -ms-grid-column: 1;
+  grid-area: rightcol;
 }
 
-.right-col .carousel {
+.right-col {
+  -ms-grid-row: 1;
+  -ms-grid-column: 2;
+  grid-area: leftcol;
+}
+
+.radio-input {
+  -ms-grid-row: 2;
+  -ms-grid-column: 2;
+  grid-area: input;
+}
+
+.grid-container {
+  display: -ms-grid;
+  display: grid;
+      grid-template-areas: "rightcol leftcol" " rightcol input";
+}
+
+@media screen and (max-width: 40em) {
+  .grid-container {
+    display: -ms-grid;
+    display: grid;
+        grid-template-areas: "rightcol" " leftcol" "input";
+  }
+}
+
+.right-col {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  max-width: 1500px;
+  margin: auto;
+  padding: 2em 0 2em 0;
+  height: -webkit-fit-content;
+  height: -moz-fit-content;
+  height: fit-content;
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  display: -webkit-box;
-  display: -ms-flexbox;
-  display: flex;
-  margin: 2rem auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.right-col .crousel-container {
+  width: 20em;
+  height: 35em;
   overflow: hidden;
+  display: block;
   position: relative;
-  width: 16.5em;
 }
 
-.right-col .carousel .carousel-images {
+.right-col #card-Container {
+  position: absolute;
+  left: 0;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  -webkit-transform: translateX(0);
-          transform: translateX(0);
-  -webkit-transition: tranform 0.25;
-  transition: tranform 0.25;
+  width: -webkit-max-content;
+  width: -moz-max-content;
+  width: max-content;
+  -webkit-transition: left 0.5s;
+  transition: left 0.5s;
 }
 
-.right-col .carousel .carousel-button {
-  background: teal;
-  border: 0;
-  border-radius: 50%;
-  color: white;
-  cursor: pointer;
-  font-size: 1.5em;
-  font-weight: bold;
-  opacity: 0.25;
-  position: absolute;
-  -webkit-transition: opacity 0.25;
-  transition: opacity 0.25;
-  width: 1.5em;
-  height: 1.5em;
-  z-index: 1;
+.right-col .card {
+  padding: 0;
+  margin: 0;
 }
 
-.right-col .carousel .previous {
-  left: 5px;
-}
-
-.right-col .carousel .next {
-  right: 5px;
-}
-
-.right-col .carousel .carousel-button:hover {
-  opacity: 0.5;
-}
-
-.right-col .cropped2 {
-  width: 16.5em;
-  height: 27.5em;
+.right-col .cropped {
+  display: inline-block;
+  -webkit-transform: scale(1);
+          transform: scale(1);
+  width: 20em;
+  height: 35em;
   -o-object-fit: cover;
      object-fit: cover;
   -o-object-position: 20% 50%;
