--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -113,7 +113,7 @@ ul {
             //left: 50%;
             top: 50%;
             transform: translate(-50%, -50%);
-            //background-color: rgb(105, 130, 243);
+            background-color: rgb(105, 130, 243);
             height: 350px;
             width: 350px;
             //overflow: hidden;
