--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -103,6 +103,9 @@ ul {
             top: 50%;
             left: 50%;
             transform: translate(-50%, -50%);
+            h1 {
+                font-family: 'Source Code Pro' 'monospace';
+            }
         }
         .carousel-container {
             position: absolute;
